# AutomatedTrading

./: .gitignore  AutomatedTrading.cpp  AutomatedTrading.sln  AutomatedTrading.vcxproj  AutomatedTrading.vcxproj.filters  BacktestService.cpp  BacktestService.h  CMakeLists.txt  DEPLOYMENT.md  ForwardPriceService.cpp  ForwardPriceService.h  ImpliedVolService.cpp  ImpliedVolService.h  KiteInstrumentService.cpp  KiteInstrumentService.h  KiteMarketDataService.cpp  KiteMarketDataService.h  KiteSession.cpp  OptionChainService.cpp  OptionChainService.h  QuoteService.cpp  QuoteService.h  SignalService.cpp  SignalService.h  VolArbitrageModels.h  VolSurfaceService.cpp  VolSurfaceService.h  config.json.example  deploy.sh
architecture/: .$automated-trading-final-architecture.drawio.bkp  automated-trading-final-architecture.drawio  equity-products-class-hierarchy.drawio  equity-products-database-model.drawio  full-system-microservices-architecture.drawio  medium-chapter-2.md  trading-platform-mobile-eks-architecture.drawio  trading-platform-service-architecture.drawio
architecture/chapter2-images/: 01-full-architecture.dot  02-messaging-paths.dot  03-persistence-cache.dot  04-product-hierarchy.dot  05-pricing-models.dot  06-strategy-backtest.dot  07-cheap-cicd.dot
backend/: AutomatedTrading.vcxproj  AutomatedTrading.vcxproj.filters  CMakeLists.txt
backend/database/: connection.env.example
backend/database/migrations/: README.md  ddl.sql  market_data.sql
backend/database/seeds/: README.md
backend/include/Analytics/Pricing/: IPricingModel.h
backend/include/Analytics/Pricing/MarketData/: VolSurfaceService.h
backend/include/Analytics/Pricing/Models/: README.md
backend/include/Analytics/Pricing/NumericalMethods/: README.md
backend/include/Analytics/Risk/: IRiskEngine.h  RiskTypes.h
backend/include/Common/: Environment.h  KiteSession.h  VolArbitrageModels.h
backend/include/Database/: DatabaseTypes.h  PostgresConnection.h
backend/include/MarketData/: KiteInstrumentService.h  KiteMarketDataProvider.h  QuoteService.h
backend/include/Pricing/: ImpliedVolService.h
backend/include/Products/Equity/: IEquityProduct.h
backend/include/Risk/: BacktestService.h
backend/include/Services/MarketData/: MarketDataPollingService.h  MarketDataRepository.h  MarketDataTypes.h
backend/include/Services/Pricing/: PostgresTradePricingRepository.h
backend/include/Services/Risk/: RiskApplicationService.h  TradeRiskData.h
backend/services/market-data/: README.md
backend/services/pricing/: README.md
backend/services/risk/: README.md
backend/src/Analytics/Pricing/: PricingTypes.cpp
backend/src/MarketData/: KiteInstrumentService.cpp  KiteMarketDataService.cpp  OptionChainService.cpp  PolygonMarketDataProvider.cpp  PublishingMarketDataProvider.cpp  QuoteService.cpp
backend/src/Networking/: KiteSession.cpp  MarketDataRecorder.cpp
backend/src/Pricing/: ImpliedVolService.cpp  VolSurfaceService.cpp
backend/src/Risk/: BacktestService.cpp
backend/src/Services/MarketData/: MarketDataPollingService.cpp  MarketDataRepository.cpp  main.cpp
backend/src/Services/Pricing/: PostgresTradePricingRepository.cpp  PricingApplicationService.cpp
backend/src/Services/Risk/: RiskApplicationService.cpp  main.cpp
backend/src/Services/TradeLibrary/: main.cpp
backend/src/Tools/: KiteSessionToken.cpp
backend/tests/: PricingApplicationServiceTests.cpp  RiskApplicationServiceTests.cpp  RiskEngineTests.cpp
database/: README.md  connection.env.example
database/migrations/: data.sql
frontend/: .env.example  .env.production.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  market-data.css  styles.css  trade-editor.css  types.ts
frontend/src/api/: client.ts  stream.ts
include/Analytics/Pricing/: PricingTypes.h  README.md
include/Analytics/Pricing/BlackScholes/: BlackScholesPricer.h  README.md
include/Analytics/Pricing/MarketData/: ForwardPriceService.h  ImpliedVolService.h  README.md
include/Common/: Environment.h  EventMessaging.h  KiteSession.h  MarketDataRecorder.h  VolArbitrageModels.h
include/Database/: IDatabaseConnection.h  InsertService.h  QueryService.h
include/MarketData/: IMarketDataProvider.h  KiteMarketDataService.h  MarketDataEvent.h  OptionChainService.h  PolygonMarketDataProvider.h  PublishingMarketDataProvider.h
include/Pricing/: ForwardPriceService.h  README.md  VolSurfaceService.h
include/Pricing/AssetClasses/: README.md
include/Pricing/AssetClasses/Commodities/: README.md
include/Pricing/AssetClasses/Equity/: README.md
include/Pricing/AssetClasses/FX/: README.md
include/Pricing/AssetClasses/Rates/: README.md
include/Products/: IProduct.h
include/Products/Equity/Options/: IOptionProduct.h  OptionTypes.h
include/Risk/: README.md  SignalService.h
include/Risk/CounterpartyRisk/: README.md
include/Risk/CreditRisk/: README.md
include/Risk/Greeks/: README.md
include/Risk/LiquidityRisk/: README.md
include/Risk/MarketRisk/: README.md
include/Risk/MarketRisk/Commodities/: README.md
include/Risk/MarketRisk/Equity/: README.md
include/Risk/MarketRisk/FX/: README.md
include/Risk/MarketRisk/Rates/: README.md
include/Risk/ModelRisk/: README.md
include/Risk/ModelRisk/Black/: README.md
include/Risk/ModelRisk/Tangent/: README.md
include/Risk/ModelRisk/ZeroCoupon/: README.md
include/Risk/Scenarios/: README.md
include/Risk/Simulations/: README.md
include/Services/Pricing/: ITradePricingRepository.h  PricingApplicationService.h  TradePricingData.h
services/pricing/: README.md
src/: main.cpp
src/Database/: DatabaseTypes.cpp  InsertService.cpp  PostgresConnection.cpp  QueryService.cpp
src/MarketData/: IMarketDataProvider.cpp  KiteMarketDataProvider.cpp  MarketDataEvent.cpp  PolygonMarketDataProvider.cpp
src/Networking/: EventMessaging.cpp
src/Pricing/: ForwardPriceService.cpp
src/Risk/: SignalService.cpp
src/Services/Pricing/: PostgresTradePricingRepository.cpp  main.cpp
src/Services/TradeLibrary/: main.cpp
tests/: BlackScholesPricerTests.cpp
(+43 files in other folders)
